@@ -13,7 +13,7 @@
 
             <!-- First Blog Post -->
             <h2>
-                <a href="#">Blog Post Title</a>
+                <%= link_to 'Blog Post Title', page_path('blogpost') %>
             </h2>
             <p class="lead">
                 by <a href="index.php">Start Bootstrap</a>
@@ -23,13 +23,13 @@
             <img class="img-responsive" src="http://placehold.it/900x300" alt="">
             <hr>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-            <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <%= link_to ('Read More <span class="glyphicon glyphicon-chevron-right"></span>').html_safe, page_path('blogpost'), :class => "btn btn-primary" %>
 
             <hr>
 
             <!-- Second Blog Post -->
             <h2>
-                <a href="#">Blog Post Title</a>
+                <%= link_to 'Blog Post Title', page_path('blogpost') %>
             </h2>
             <p class="lead">
                 by <a href="index.php">Start Bootstrap</a>
@@ -39,13 +39,13 @@
             <img class="img-responsive" src="http://placehold.it/900x300" alt="">
             <hr>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio minima dolorum perferendis labore impedit voluptates!</p>
-            <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <%= link_to ('Read More <span class="glyphicon glyphicon-chevron-right"></span>').html_safe, page_path('blogpost'), :class => "btn btn-primary" %>
 
             <hr>
 
             <!-- Third Blog Post -->
             <h2>
-                <a href="#">Blog Post Title</a>
+                <%= link_to 'Blog Post Title', page_path('blogpost') %>
             </h2>
             <p class="lead">
                 by <a href="index.php">Start Bootstrap</a>
@@ -55,7 +55,7 @@
             <img class="img-responsive" src="http://placehold.it/900x300" alt="">
             <hr>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptates, voluptas dolore ipsam cumque quam veniam accusantium laudantium adipisci architecto itaque dicta aperiam maiores provident id incidunt autem. Magni, ratione.</p>
-            <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <%= link_to ('Read More <span class="glyphicon glyphicon-chevron-right"></span>').html_safe, page_path('blogpost'), :class => "btn btn-primary" %>
 
             <hr>
 
